--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v3
         with: 
           token: ${{github.token}}
-
+      - name: github checkout
         run: |
           echo $GITHUB_REPOSITORY
           echo "${{github.token}}"
