--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,7 +10,8 @@ jobs:
         uses: actions/checkout@v3
         with: 
           token: ${{github.token}}
-      - name: github checkout
+      - name: list directories
         run: |
           echo $GITHUB_REPOSITORY
           echo "${{github.token}}"
+          ls -a
