--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,7 +8,8 @@ jobs:
     steps:
       - name: github checkout
         uses: actions/checkout@v3
-        with: 
+        with:
+          submodules: 'true' 
           token: ${{github.token}}
       - name: list directories
         run: |
